--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="MediVisit mobile app, MediVisit online doctor consultation, MediVisit telemedicine app, MediVisit home doctor call app, MediVisit virtual doctor visit app, MediVisit remote medical consultation app, MediVisit app for online video consultations, MediVisit on-demand doctor app, MediVisit telehealth app, MediVisit mobile doctor appointment app" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="MediVisit"
+      content="MediVisit App"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
