added link with attribute rel shortcut icon

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
+    <link rel="shortcut icon" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0"  />
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="MediVisit mobile app, MediVisit online doctor consultation, MediVisit telemedicine app, MediVisit home doctor call app, MediVisit virtual doctor visit app, MediVisit remote medical consultation app, MediVisit app for online video consultations, MediVisit on-demand doctor app, MediVisit telehealth app, MediVisit mobile doctor appointment app" />
