--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <link rel="shortcut icon" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0"  />
     <meta name="theme-color" content="#000000" />
-    <meta name="keywords" content="MediVisit mobile app, MediVisit online doctor consultation, MediVisit telemedicine app, MediVisit home doctor call app, MediVisit virtual doctor visit app, MediVisit remote medical consultation app, MediVisit app for online video consultations, MediVisit on-demand doctor app, MediVisit telehealth app, MediVisit mobile doctor appointment app" />
+    <meta name="keywords" content="MediVisit.dr mobile app, MediVisit.dr online doctor consultation, MediVisit.dr telemedicine app, MediVisit.dr home doctor call app, MediVisit.dr virtual doctor visit app, MediVisit.dr remote medical consultation app, MediVisit.dr app for online video consultations, MediVisit.dr on-demand doctor app, MediVisit.dr telehealth app, MediVisit.dr mobile doctor appointment app" />
     <meta
-      name="MediVisit"
-      content="MediVisit App"
+      name="MediVisit.dr"
+      content="MediVisit.dr App"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MediVisit</title>
+    <title>MediVisit.dr</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
