--- a/public/index.html
+++ b/public/index.html
@@ -1,47 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
-    <link rel="shortcut icon" href="favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0"  />
-    <meta name="theme-color" content="#000000" />
-    <meta name="keywords" content="MediVisit.dr mobile app, MediVisit.dr online doctor consultation, MediVisit.dr telemedicine app, MediVisit.dr home doctor call app, MediVisit.dr virtual doctor visit app, MediVisit.dr remote medical consultation app, MediVisit.dr app for online video consultations, MediVisit.dr on-demand doctor app, MediVisit.dr telehealth app, MediVisit.dr mobile doctor appointment app" />
-    <meta
-      name="MediVisit.dr"
-      content="MediVisit.dr App"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0"  />
+  <meta name="theme-color" content="#000000" />
+  <meta name="title" content="MediVisit.dr" />
+  <meta name="description" content="Are you tired of queues in hospitals? Get quality doctor visits from home with Medivisit. Download app. Coming soon. 150k. Patients. Coming soon." />
+  <meta name="keywords" content="MediVisit.dr mobile app, MediVisit.dr online doctor consultation, MediVisit.dr telemedicine app, MediVisit.dr home doctor call app, MediVisit.dr virtual doctor visit app, MediVisit.dr remote medical consultation app, MediVisit.dr app for online video consultations, MediVisit.dr on-demand doctor app, MediVisit.dr telehealth app, MediVisit.dr mobile doctor appointment app" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>MediVisit.dr</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <meta property="og:image" content="" />
+  <meta name="twitter:image" content="" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <title>MediVisit.dr</title>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+</body>
 </html>
