--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0"  />
   <meta name="theme-color" content="#000000" />
-  <meta name="title" content="MediVisit.dr" />
+  <meta name="title" content="DOVIRA" />
   <meta name="description" content="Are you tired of queues in hospitals? Get quality doctor visits from home with Medivisit. Download app. Coming soon. 150k. Patients. Coming soon." />
-  <meta name="keywords" content="MediVisit.dr mobile app, MediVisit.dr online doctor consultation, MediVisit.dr telemedicine app, MediVisit.dr home doctor call app, MediVisit.dr virtual doctor visit app, MediVisit.dr remote medical consultation app, MediVisit.dr app for online video consultations, MediVisit.dr on-demand doctor app, MediVisit.dr telehealth app, MediVisit.dr mobile doctor appointment app" />
+  <meta name="keywords" content="DOVIRA mobile app, DOVIRA online doctor consultation, DOVIRA telemedicine app, DOVIRA home doctor call app, DOVIRA virtual doctor visit app, DOVIRA remote medical consultation app, DOVIRA app for online video consultations, DOVIRA on-demand doctor app, DOVIRA telehealth app, DOVIRA mobile doctor appointment app" />
 
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
@@ -15,7 +15,7 @@
   <meta property="og:image" content="" />
   <meta name="twitter:image" content="" />
 
-  <title>MediVisit.dr</title>
+  <title>DOVIRA</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
