finished refactoring desktop and mobile version

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0"  />
   <meta name="theme-color" content="#000000" />
   <meta name="title" content="DOVIRA" />
-  <meta name="description" content="Are you tired of queues in hospitals? Get quality doctor visits from home with Medivisit. Download app. Coming soon. 150k. Patients. Coming soon." />
+  <meta name="description" content="Are you tired of queues in hospitals? Get quality doctor visits from home with DOVIRA.. Download app. Coming soon. 150k. Patients. Coming soon." />
   <meta name="keywords" content="DOVIRA mobile app, DOVIRA online doctor consultation, DOVIRA telemedicine app, DOVIRA home doctor call app, DOVIRA virtual doctor visit app, DOVIRA remote medical consultation app, DOVIRA app for online video consultations, DOVIRA on-demand doctor app, DOVIRA telehealth app, DOVIRA mobile doctor appointment app" />
 
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
